Revert "feat(images): support renaming display filename"
This reverts commit 6faf2527a4d5490d8508ea0a097457dd43cfb594.
